# Corewar

./: .gitignore  CMakeLists.txt  op.c  vm.c  vm.h
ft_printf/: ft_bzero.c  ft_is_flag.c  ft_printf.c  ft_printf.h  ft_strlen.c  ft_strnew.c  ft_work_out.c  long_math.c  main.c  str_longmath.c  work_out_char.c  work_out_d.c  work_out_f.c  work_out_uxo.c
includes/: ft_drow.h  op.h  vm.h
libft/: Makefile
libft/inc/: libft.h
libft/src/: ft_atoi.c  ft_bzero_safe.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  (+17 more)
src/: calculations.c  check_to_die.c  corewar.c  free_vm.c  ft_drow.c  ft_error.c  init_game.c  op.c  parse_champion.c  parser.c  player.c  print_stat.c  printing.c  step.c  utils1.c  virtual_machine.c
src/operations/: op_add.c  op_aff.c  op_and.c  op_fork.c  op_ld.c  op_ldi.c  op_lfork.c  op_live.c  op_lld.c  op_lldi.c  op_or.c  op_st.c  op_sti.c  op_sub.c  op_utils.c  op_xor.c  op_zjmp.c  utils.c
